static/style/base.css
/* ... */
#snapshotoverlay_msg_box {
    text-align: justify;
}
#snapshotoverlay_msg_box_important {
    background: #BB0011;
    width: 700px;
    margin: 100px auto 0;
    min-height: 72px;
    padding: 10px;
    color: white;
    -moz-border-radius: 10px;
    -webkit-border-radius:10px;
    -khtml-border-radius:10px;
    border-radius: 10px;
}
#snapshotoverlay_msg_box_warning {
    background: #FFB400;
    width: 700px;
    margin: 71px auto 0;
    min-height: 72px;
    padding: 10px;
    color: white;
    -moz-border-radius: 10px;
    -webkit-border-radius:10px;
    -khtml-border-radius:10px;
    border-radius: 10px;
}
.info_msg_box {
    text-align: center;
}
.info_msg_box_content {
    background-color: #FFF1A8;
    display: inline;
    font-weight: 400;
    padding: 2px 5px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    -khtml-border-radius: 3px;
    border-radius: 3px;
}
.help_text {
    color: #9D9E9E;
    margin-top: -10px;
}
.help_link {
    color: #9D9E9E;
    font-size: 9px;
    padding: 0 5px;
    cursor: help;
}
.help_link_on {
    background-color: #E7E8E9;
    padding: 1px 5px 5px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    -khtml-border-radius: 3px;
    border-radius: 3px;
}
.help_content {
    color: #9D9E9E;
    width: 630px;
    background-color: #E7E8E9;
    margin: 3px 0 10px;
    padding: 3px 5px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    -khtml-border-radius: 3px;
    border-radius: 3px;
}
.help_content a{
    color: #9D9E9E;
}
.services_list li {
    margin-bottom: 5px;
}
.services_list form {
    margin-top: 5px;
}
.srvc_log {
    padding: 0 10px;
    font-size: medium;
}
#popupoverlay{
    background:transparent;
    position:fixed;
}

#snapshot_status_box{
    width: 500px;
    margin-left: -250px;
    left: 50%;
}

#reboot_status_box{
    width: 500px;
    margin-left: -250px;
    left: 50%;
}

#expand_vol{
    cursor: pointer;
    background-image:url(/cloud/static/images/disc_plus.png);
    background-repeat:no-repeat;
    display:inline-block;
    width:20px;
}

#share_a_cluster{
    cursor: pointer;
    background-image:url(/cloud/static/images/fugue/share.png);
    background-repeat:no-repeat;
    display:inline-block;
    width:20px;
}
.del_scf{
    cursor: pointer;
    background-image:url(/cloud/static/images/delete_icon.png);
    background-repeat:no-repeat;
    display:inline-block;
    width:20px;
}

.del_scf:hover {
    background-image : url(/cloud/static/images/delete_icon_dark.png);
}

#snapshotoverlay{
    background:transparent url(/cloud/static/images/overlay.png) repeat top left;
    position:fixed;
    top:0px;
    bottom:0px;
    left:0px;
    right:0px;
    z-index:100;
}

#no_click_clear_overlay{
    background: none;
    position:fixed;
    top:0px;
    bottom:0px;
    left:0px;
    right:0px;
    z-index:100;
}

#reboot_overlay{
    background:transparent url(/cloud/static/images/overlay.png) repeat top left;
    position:fixed;
    top:0px;
    bottom:0px;
    left:0px;
    right:0px;
    z-index:100;
}
#voloverlay{
    position:absolute;
}

#volume_config{
    width: 500px;
    margin-left: -250px;
    left: 50%;
    z-index: 101;
}

a.boxclose{
    float:right;
    width:26px;
    height:26px;
    background:transparent url(/cloud/static/images/cancel.png) repeat top left;
    margin-top:-30px;
    margin-right:-30px;
    cursor:pointer;
}

.box h1{
    border-bottom: 1px dashed #7F7F7F;
    margin:-20px -20px 0px -20px;
    padding:10px;
    background-color: #2C3143;
    color: white;
    -moz-border-radius:20px 20px 0px 0px;
    -webkit-border-top-left-radius: 20px;
    -webkit-border-top-right-radius: 20px;
    -khtml-border-top-left-radius: 20px;
    -khtml-border-top-right-radius: 20px;
    border-radius: 20px 20px 0 0;
}

#status_container {
    position:relative;
    height:120px;
	margin: 0 auto;
	width: 700px;
	padding:0px 15px 0px 10px;
}

#status_svcs{
    text-align:center;
    margin-bottom: 7px;
}

#status_svcs ul{
    margin:0px 0px 2px 0px;
}

#status_svcs li{
    display:inline-block;
    width:100px;
}

#status_svcs div{
    display:inline-block;
    width:16px;
    height:16px;
    background-repeat: no-repeat;
}

#volume_detail{
    display:none;
    text-align:center;
}

#volume_detail ul{
    margin:0px 0px 2px 0px;
}

#volume_detail li{
    display:inline-block;
    width:100px;
}

#volume_detail div{
    display:inline-block;
    width:16px;
    height:16px;
    background-repeat: no-repeat;
}

#fs_detail{
    display:none;
    text-align:center;
}

#fs_detail ul{
    margin:0px 0px 2px 0px;
}

#fs_detail li{
    display:inline-block;
    width:100px;
}

.vol_det_clicker{
    cursor:pointer;
}

.fs_det_clicker{
    cursor:pointer;
}

#fs_detail div{
    display:inline-block;
    width:16px;
    height:16px;
    background-repeat: no-repeat;
}


#cluster_view_tooltip ul{
    margin:0;
    padding:0;
    list-style-type:none;
    text-align:left;
    font-size: 90%;
}

#cluster_view_tooltip li{
    width:105px;
    list-style-type:none;
}

#cluster_view_tooltip .legendrow{
    width:105px;
    height:20px;
    vertical-align:center;
    line-height:28px;
}
#cluster_view_tooltip .legendrow img{
    float:left;
    margin:4px;
}

#cluster_view_tooltip div{
    display:inline-block;
    width:16px;
    height:16px;
    background-repeat: no-repeat;
    margin-top:2px;
}

div#instance_status_icons {
    margin: 0 auto;
    width: 105px;
    text-align: center;
}

div.status_green{
    background-image: url(../images/fugue/status.png);
}

div.status_red{
    background-image: url(../images/fugue/status-busy.png);
}

div.status_yellow{
    background-image: url(../images/fugue/status-away.png);
}

div.status_nodata{
    background-image: url(../images/fugue/status-offline.png);
}

ul li div#instance_status_icons img#instance_reboot_icon {
    height: 10px;
}

ul li div#instance_status_icons img#instance_terminate_icon {
    height: 10px;
}
/* ... */

